--- a/profile/css/style.css
+++ b/profile/css/style.css
@@ -59,11 +59,72 @@ h1 a {display: block; color: #4B1DF2; padding: 3px 10px;  font-size: 1.5rem; fon
 
 /*레이아웃*/
 section { width:100%; position:relative; background-size:cover; background-position:right center; overflow:hidden;}
-/* background-attachment:fixed; */
-/* section:nth-child(1) { background-image:url(../img/bg1.jpg); }
-section:nth-child(2) { background-image:url(../img/bg2.jpg); }
-section:nth-child(3) { background-image:url(../img/bg3.jpg); }
-section:nth-child(4) { background-image:url(../img/bg4.jpg); } */
+section:nth-child(4)::after { 
+    content: '';
+    display: block;
+    width: 100px;
+    height: 100px;
+    background: url(../img/mobileQR.png) 50% 50% no-repeat;
+    background-size: contain;
+    position: absolute;
+    right: 3rem;
+    bottom: 3rem;
+}
+section:nth-child(5)::after { 
+    content: '';
+    display: block;
+    width: 100px;
+    height: 100px;
+    background: url(../img/mediaQR.png) 50% 50% no-repeat;
+    background-size: contain;
+    position: absolute;
+    right: 3rem;
+    bottom: 3rem;
+}
+section:nth-child(6)::after { 
+    content: '';
+    display: block;
+    width: 100px;
+    height: 100px;
+    background: url(../img/bootstrapQR.png) 50% 50% no-repeat;
+    background-size: contain;
+    position: absolute;
+    right: 3rem;
+    bottom: 3rem;
+}
+section:nth-child(7)::after { 
+    content: '';
+    display: block;
+    width: 100px;
+    height: 100px;
+    background: url(../img/wordpressQR.png) 50% 50% no-repeat;
+    background-size: contain;
+    position: absolute;
+    right: 3rem;
+    bottom: 3rem;
+}
+section:nth-child(8)::after { 
+    content: '';
+    display: block;
+    width: 100px;
+    height: 100px;
+    background: url(../img/vueQR.png) 50% 50% no-repeat;
+    background-size: contain;
+    position: absolute;
+    right: 3rem;
+    bottom: 3rem;
+}
+section:nth-child(9)::after { 
+    content: '';
+    display: block;
+    width: 100px;
+    height: 100px;
+    background: url(../img/reactQR.png) 50% 50% no-repeat;
+    background-size: contain;
+    position: absolute;
+    right: 3rem;
+    bottom: 3rem;
+}
 
 /*텍스트 박스*/
 #home {width: 100%; text-align: center; position:absolute; top:50%; left:55%; z-index:11; transform: translate(-50%, -50%);}
@@ -87,6 +148,7 @@ article {width: 80%; text-align: start; position:absolute; top:50%; left: 60%; z
     padding-top: 6rem;
 }
 #profileRight {
+    padding-top: 1rem;
     width: 45%;
 }
 #profileRight .profileSpan {
@@ -103,8 +165,7 @@ article {width: 80%; text-align: start; position:absolute; top:50%; left: 60%; z
 #profileTable tr td {width: 50%; padding: 30px 0;}
 #profileTable p {font-size: 18px; font-weight: 700; letter-spacing: -1px; margin-bottom: 10px;}
 #profileTable span {font-size: 16px; font-weight: 400; letter-spacing: 0;}
-
-
+.skillsBoard i {color: #4B1DF2; font-size: 27px; font-weight: 600;}
 #pcZone::after,
 #mobileZone::after {
     content: '';
@@ -357,8 +418,8 @@ article {width: 80%; text-align: start; position:absolute; top:50%; left: 60%; z
     z-index: -1;
     position: absolute;
     height: 100%;
-    top: 5px;
-    left: 5px;
+    top: 7px;
+    left: 7px;
     transition: 0.2s;
     background-color: #4B1DF2;
 }
@@ -490,7 +551,7 @@ footer address p {
 /* profile card */
 .card {
     /* width: 70%; */
-    min-height: 480px;
+    /* min-height: 480px; */
     background-color: #f5f5f5;
     border-radius: 8px;
     z-index: 1;
@@ -642,32 +703,153 @@ footer address p {
 }
 }
 
+/* profile effect */
+.card__content {
+    width: 270px;
+    --border-radius: 150px;
+    --border-width: 5px;
+    appearance: none;
+    position: relative;
+    margin: 0 auto;
+    margin-top: 1rem;
+    /* padding: 1em 2em; */
+    border: 0;
+    background: transparent;
+    font-size: 16px;
+    font-weight: 500;
+    color: #fff;
+    z-index: 2;
+    border-radius: 15px;
+}
+.card__content::after {
+    --m-i: linear-gradient(#000, #000);
+    --m-o: content-box, padding-box;
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    padding: var(--border-width);
+    border-radius: var(--border-radius);
+    background-image: conic-gradient(
+        #488cfb,
+        #29dbbc,
+        #ddf505,
+        #ff9f0e,
+        #e440bb,
+        #655adc,
+        #488cfb
+    );
+    -webkit-mask-image: var(--m-i), var(--m-i);
+    mask-image: var(--m-i), var(--m-i);
+    -webkit-mask-origin: var(--m-o);
+    mask-origin: var(--m-o);
+    -webkit-mask-clip: var(--m-o);
+    mask-composite: exclude;
+    -webkit-mask-composite: destination-out;
+    filter: hue-rotate(0);
+    animation: rotate-hue linear 500ms infinite;
+    /* animation-play-state: paused; */
+}
 
+/* .card__content:hover::after {
+    animation-play-state: running;
+} */
 
+@keyframes rotate-hue {
+to {
+    filter: hue-rotate(1turn);
+}
+    }
 
+.card__content,
+.card__content::after {
+    box-sizing: border-box;
+}
 
+.card__content:active {
+    --border-width: 5px;
+}
 
+.card_para {
+    text-align: center;
+    margin-top: 1rem;
+    padding: 0 2rem;
+    padding-bottom: 2.25rem;
+}
+.card_para p {
+    font-size: 1.75rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* 프로필 공개여부 */
+.switch-holder {
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+    padding: 7px 10px;
+    border-radius: 10px;
+    box-shadow: -8px -8px 15px rgba(255, 255, 255, .7),
+            10px 10px 10px rgba(0, 0, 0, .2),
+            inset 8px 8px 15px rgba(255, 255, 255, .7),
+            inset 10px 10px 10px rgba(0, 0, 0, .2);
+    justify-content: space-between;
+    align-items: center;
+}
+.switch-label {
+    padding: 0 20px 0 10px;
+}
+.switch-label i {
+    margin-right: 5px;
+}
+.switch-label span {
+    font-weight: 500;
+}
+.switch-toggle {
+    height: 40px;
+}
+.switch-toggle input[type="checkbox"] {
+    position: absolute;
+    opacity: 0;
+    z-index: -2;
+}
+.switch-toggle input[type="checkbox"]+label {
+    position: relative;
+    display: inline-block;
+    width: 100px;
+    height: 40px;
+    border-radius: 20px;
+    margin: 0;
+    cursor: pointer;
+    box-shadow: inset -8px -8px 15px rgba(255, 255, 255, .6),
+            inset 10px 10px 10px rgba(0, 0, 0, .25);
+}
+.switch-toggle input[type="checkbox"]+label::before {
+    position: absolute;
+    content: 'OFF';
+    font-size: 13px;
+    text-align: center;
+    line-height: 25px;
+    top: 8px;
+    left: 8px;
+    width: 45px;
+    height: 25px;
+    border-radius: 20px;
+    background-color: #eeeeee;
+    box-shadow: -3px -3px 5px rgba(255, 255, 255, .5),
+            3px 3px 5px rgba(0, 0, 0, .25);
+    transition: .3s ease-in-out;
+}
+.switch-toggle input[type="checkbox"]:checked+label::before {
+    left: 50%;
+    content: 'ON';
+    color: #fff;
+    background-color: #00b33c;
+    box-shadow: -3px -3px 5px rgba(255, 255, 255, .5),
+            3px 3px 5px #00b33c;
+}
 
 
 
