--- a/profile/css/style.css
+++ b/profile/css/style.css
@@ -69,6 +69,7 @@ section:nth-child(4)::after {
     position: absolute;
     right: 3rem;
     bottom: 3rem;
+    opacity: .35;
 }
 section:nth-child(5)::after { 
     content: '';
@@ -80,6 +81,7 @@ section:nth-child(5)::after {
     position: absolute;
     right: 3rem;
     bottom: 3rem;
+    opacity: .35;
 }
 section:nth-child(6)::after { 
     content: '';
@@ -91,6 +93,7 @@ section:nth-child(6)::after {
     position: absolute;
     right: 3rem;
     bottom: 3rem;
+    opacity: .35;
 }
 section:nth-child(7)::after { 
     content: '';
@@ -102,6 +105,7 @@ section:nth-child(7)::after {
     position: absolute;
     right: 3rem;
     bottom: 3rem;
+    opacity: .35;
 }
 section:nth-child(8)::after { 
     content: '';
@@ -113,6 +117,7 @@ section:nth-child(8)::after {
     position: absolute;
     right: 3rem;
     bottom: 3rem;
+    opacity: .35;
 }
 section:nth-child(9)::after { 
     content: '';
@@ -124,6 +129,7 @@ section:nth-child(9)::after {
     position: absolute;
     right: 3rem;
     bottom: 3rem;
+    opacity: .35;
 }
 
 /*텍스트 박스*/
@@ -249,7 +255,7 @@ article {width: 80%; text-align: start; position:absolute; top:50%; left: 60%; z
     position: relative;
 }
 #pcLeft, #mobileLeft, #resLeft, #bootLeft, #wordLeft, #vueLeft, #reactLeft {
-    width: 550px;
+    max-width: 550px;
     padding-right: 4rem;
     padding-top: 2rem;
 }
@@ -366,9 +372,23 @@ article {width: 80%; text-align: start; position:absolute; top:50%; left: 60%; z
 }
 #pcRight, #mobileRight, #resRight, #bootRight, #wordRight,
 #vueRight, #reactRight {
-    width: 650px;
+    max-width: 650px;
     position: relative;
     text-align: center;
+}
+#mobileRight, #reactRight {
+    padding-left: 7.5rem;
+}
+#pcRight img:nth-child(1),
+#resRight img:nth-child(1),
+#bootRight img:nth-child(1),
+#wordRight img:nth-child(1),
+#vueRight img:nth-child(1) {
+    width: 85%;
+}
+#mobileRight img:nth-child(1),
+#reactRight img:nth-child(1){
+    width: 60%;
 }
 #pcRight img:nth-child(2),
 #mobileRight img:nth-child(2),
@@ -377,9 +397,10 @@ article {width: 80%; text-align: start; position:absolute; top:50%; left: 60%; z
 #wordRight img:nth-child(2),
 #vueRight img:nth-child(2),
 #reactRight img:nth-child(2) {
+    width: 80.5%;
     position: absolute;
     left: 64px;
-    top: 13px;
+    top: 14px;
 }
 
 /* 버튼모양 */
@@ -705,7 +726,7 @@ footer address p {
 
 /* profile effect */
 .card__content {
-    width: 270px;
+    max-width: 270px;
     --border-radius: 150px;
     --border-width: 5px;
     appearance: none;
@@ -720,6 +741,9 @@ footer address p {
     color: #fff;
     z-index: 2;
     border-radius: 15px;
+}
+.card__content img {
+    width: 100%;
 }
 .card__content::after {
     --m-i: linear-gradient(#000, #000);
@@ -852,27 +876,245 @@ to {
 }
 
 
-
-
-
-
-
-
-
-/*첫 번째 박스 이미지*/
+/* 메인 3d 이미지 */
 .p11 { position:absolute; bottom:200px; right:285px; transform: rotate(.03turn);}
 .p12 { position:absolute; bottom:250px; right:120px; transform: rotate(-.03turn);}
 .p13 { position:absolute; bottom:120px; right:175px; transform: rotate(-.03turn);}
-
-/*두 번째 박스 이미지*/
 .p21 { position:absolute; top:120px; left:350px; transform: rotate(.03turn);}
 .p22 { position:absolute; bottom:120px; left:300px;}
 .p31 { position:absolute; top:100px; right:225px; transform: rotate(-.03turn);}
 
-/*세 번째 박스 이미지 */
-.p32 { position:absolute; bottom:-270px; right:110px;}
-.p33 { position:absolute; bottom:-130px; right:-70px;}
 
-/*네 번째 박스 이미지 */
-.p41 { position:absolute; bottom:-120px; right:20px;}
-.p42 { position:absolute; bottom:-180px; right:0px;}
+/* media query zone */
+@media screen and (max-width:1024px) {
+    #home {left: 57%;}
+    #home p, #home strong {font-size: 4.5rem;}
+    .p21{left: 200px;}
+    .p22{left: 140px;}
+    .p11{right: 200px; bottom: 120px;}
+    .p12{right: 20px; bottom: 145px;}
+    .p13{right: 90px; bottom: 75px;}
+    .p31{right: 125px;}
+    #profileRight {display: none;}
+    #profile {flex-direction: column;}
+    #profileLeft {width: 80%; margin: 0 auto;}
+    #profileCenter {width: 90%; margin: 0 auto; padding: 0; display: flex;}
+    #profileCenter a {width: 18%; margin: 40px auto;}
+    #pcZone, #mobileZone, #resZone, #bootZone, #wordZone, #vueZone, #reactZone {
+        width: 80%;
+        flex-direction: column-reverse;
+        gap: 0;
+    }
+    #pcLeft, #mobileLeft, #resLeft, #bootLeft, #wordLeft, #vueLeft, #reactLeft {
+        padding: 0;
+        margin: 0 auto;
+    }
+    #pcRight, #mobileRight, #resRight, #bootRight, #wordRight, #vueRight, #reactRight {
+        max-width: 500px;
+        margin: 0 auto;
+    }
+    #pcRight img:nth-child(2), #mobileRight img:nth-child(2), #resRight img:nth-child(2), #bootRight img:nth-child(2), #wordRight img:nth-child(2), #vueRight img:nth-child(2), #reactRight img:nth-child(2) {
+        left: 49px;
+        top: .66rem;
+    }
+    .css-button-retro--sky {
+        min-width: 100px;
+        height: 25px;
+        font-size: 1rem;
+    }
+    .css-button {line-height: 25px; margin-top: 15px;}
+    #pcZone::after, #mobileZone::after, #resZone::after, #bootZone::after,
+    #wordZone::after, #vueZone::after, #reactZone::after {display: none;}
+    #pcLeft h2, #mobileLeft h2, #resLeft h2, #bootLeft h2, #wordLeft h2, #vueLeft h2, #reactLeft h2{
+        margin: 10px 0;
+    }
+    #pcLeft span:nth-of-type(1), #mobileLeft span:nth-of-type(1), #resLeft span:nth-of-type(1),
+    #bootLeft span:nth-of-type(1), #wordLeft span:nth-of-type(1), #vueLeft span:nth-of-type(1), #reactLeft span:nth-of-type(1){
+        display: none;
+    }
+    #pcLeft > span, #mobileLeft > span, #resLeft > span, #bootLeft > span, 
+    #wordLeft > span, #vueLeft > span, #reactLeft > span{
+        display: inline-block;
+        margin-bottom: 10px;
+    }
+    #pcLeft p, #mobileLeft p, #resLeft p, #bootLeft p, #wordLeft p, #vueLeft p, #reactLeft p {
+        margin: 0;
+        margin-bottom: .25rem;
+    }
+    #mobileRight, #reactRight {padding: 0;}
+    #mobileRight img:nth-child(1), #reactRight img:nth-child(1) {width: 45%;}
+    section:nth-child(4)::after,
+    section:nth-child(5)::after,
+    section:nth-child(6)::after,
+    section:nth-child(7)::after,
+    section:nth-child(8)::after,
+    section:nth-child(9)::after {
+        bottom: 14rem;
+    }
+} 
+
+@media screen and (max-width:768px) {
+    #home {
+        left: 60%;
+    }
+    #home p, #home strong {
+        font-size: 3rem;
+    }
+    .p21{left: 170px; top: 140px;}
+    .p22{left: 150px;}
+    .p11{right: 175px; bottom: 155px;}
+    .p12{right: 20px; bottom: 200px;}
+    .p13{right: 90px; bottom: 85px;}
+    .p31{right: 50px;}
+    #profileLeft {
+        width: 87.5%;
+    }
+    #profileCenter a {
+        width: 25%;
+    }
+    #pcRight img:nth-child(2), #mobileRight img:nth-child(2), #resRight img:nth-child(2), 
+    #bootRight img:nth-child(2), #wordRight img:nth-child(2), #vueRight img:nth-child(2), 
+    #reactRight img:nth-child(2) {
+        left: 48px;
+        top: .655rem;
+    }
+    #mobileRight img:nth-child(1), #reactRight img:nth-child(1) {
+        width: 40%;
+    }
+    .css-button-retro--sky {
+        width: 90px;
+        font-size: .8rem;
+    }
+    section:nth-child(4)::after, section:nth-child(5)::after, section:nth-child(6)::after, section:nth-child(7)::after, section:nth-child(8)::after, section:nth-child(9)::after {
+        bottom: 16rem;
+    }
+    #pcRight img:nth-child(1), #resRight img:nth-child(1), #bootRight img:nth-child(1), #wordRight img:nth-child(1), #vueRight img:nth-child(1) {
+        width: 75%;
+    }
+    #pcRight img:nth-child(2), #mobileRight img:nth-child(2), #resRight img:nth-child(2), #bootRight img:nth-child(2), #wordRight img:nth-child(2), #vueRight img:nth-child(2), #reactRight img:nth-child(2) {
+        width: 70.5%;
+        left: 72px;
+    }
+}
+
+@media screen and (max-width:640px) {
+    #home p, #home strong {
+        font-size: 2.5rem;
+    }
+    .p21{left: 135px;}
+    .p22{left: 110px;}
+    .hover-text {
+        --border-right: 8px;
+        -webkit-text-stroke: 0;
+    }
+    #profileLeft {
+        width: 75%;
+        padding-left: 2rem;
+    }
+    .card_para {
+        padding: 0 0 2.25rem 0;
+    }
+    #profileCenter {
+        flex-direction: column;
+        padding-left: 2rem;
+    }
+    #profileCenter {
+        padding-top: 10px;
+    }
+    #profileCenter a {
+        width: 76%;
+        margin: 10px auto;
+    }
+    #profileCenter a span {
+        font-size: 1.35rem;
+    }
+    #pcZone, #mobileZone, #resZone, #bootZone, #wordZone, #vueZone, #reactZone {
+        gap: 2rem;
+    }
+    #mobileRight, #reactRight {
+        padding-left: 2rem;
+    }
+    #pcRight, #mobileRight, #resRight, #bootRight, #wordRight, #vueRight, #reactRight {
+        padding-left: 2rem;
+    }
+    #pcRight img:nth-child(2), #mobileRight img:nth-child(2), #resRight img:nth-child(2), 
+    #bootRight img:nth-child(2), #wordRight img:nth-child(2), #vueRight img:nth-child(2), 
+    #reactRight img:nth-child(2) {
+        width: 66%;
+        left: 85px;
+        top: 0.45rem;
+    }
+    #pcLeft, #mobileLeft, #resLeft, #bootLeft, #wordLeft, #vueLeft, #reactLeft {
+        padding: 0 0rem 0 2rem;
+    }
+    #pcLeft h2, #mobileLeft h2, #resLeft h2, #bootLeft h2, #wordLeft h2, #vueLeft h2, #reactLeft h2 {
+        font-size: 2rem;
+    }
+    #mobileRight img:nth-child(1), #reactRight img:nth-child(1) {
+        width: 35%;
+    }
+    section:nth-child(4)::after, section:nth-child(9)::after {
+        bottom: 17rem;
+    }
+    section:nth-child(5)::after {
+        bottom: 17.35rem;
+    }
+    section:nth-child(6)::after,
+    section:nth-child(7)::after,
+    section:nth-child(8)::after {
+        bottom: 17.5rem;
+    }
+    .css-button {
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-width:480px) {
+    h1{left: 40px;}
+    #menu{padding-left: 40px;}
+    #home {
+        left: 64%;
+    }
+    #home p, #home strong {
+        font-size: 1.75rem;
+    }
+    section:nth-of-type(1) img {
+        width: 100px;
+    }
+    .p21{left: 130px; top: 200px;}
+    .p22{left: 120px; bottom: 100px;}
+    .p11{right: 140px; bottom: 200px;}
+    .p12{right: 20px; bottom: 240px;}
+    .p13{right: 55px; bottom: 105px;}
+    .p31{right: 30px; top: 150px;}
+    .card_para p {
+        font-size: 1.5rem;
+    }
+    .card__content {
+        max-width: 160px;
+    }
+    .switch-holder {
+        width: 90%;
+    }
+    #profileCenter a span {
+        font-size: 1.125rem;
+    }
+    #pcRight img:nth-child(2), #mobileRight img:nth-child(2), #resRight img:nth-child(2), #bootRight img:nth-child(2), #wordRight img:nth-child(2), #vueRight img:nth-child(2), #reactRight img:nth-child(2) {
+        width: 62.9%;
+        left: 73px;
+        top: 0.4rem;
+    }
+    #pcLeft > span, #mobileLeft > span, #resLeft > span, #bootLeft > span, #wordLeft > span, #vueLeft > span, #reactLeft > span {
+        font-size: 14px;
+    }
+    #pcZone, #mobileZone, #resZone, #bootZone, #wordZone, #vueZone, #reactZone {
+        gap: 1rem;
+    }
+    #mobileRight img:nth-child(1), #reactRight img:nth-child(1) {
+        width: 45%;
+    }
+    section:nth-child(4)::after, section:nth-child(5)::after, section:nth-child(6)::after, section:nth-child(7)::after, section:nth-child(8)::after, section:nth-child(9)::after {
+        right: 1rem;
+        bottom: 1rem;
+    }
+}
