--- a/profile/css/style.css
+++ b/profile/css/style.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap'); */
 
 /*  Reset CSS  */
 * { margin:0;  padding:0;}
