--- a/profile/css/style.css
+++ b/profile/css/style.css
@@ -188,7 +188,8 @@ article {width: 80%; text-align: start; position:absolute; top:50%; left: 60%; z
 #profileTable tr td {width: 50%; padding: 30px 0;}
 #profileTable p {font-size: 18px; font-weight: 700; letter-spacing: -1px; margin-bottom: 10px;}
 #profileTable span {font-size: 16px; font-weight: 400; letter-spacing: 0;}
-.skillsBoard i {color: #4B1DF2; font-size: 27px; font-weight: 600;}
+.skillsBoard i {color: #4B1DF2; font-size: 27px; font-weight: 500;}
+.skillsBoard img {margin-top: 1rem;}
 #pcZone::after,
 #mobileZone::after {
     content: '';
